--- a/frontend/style.css
+++ b/frontend/style.css
@@ -271,7 +271,7 @@
     background-color: #125ea9;
 }
 
-#error_messages, #warning_messages {
+.error, .warning {
     display: none;
     background-color: #ffcccc;
     border: 1px solid #ff9999;
@@ -285,8 +285,24 @@
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
 
-#error_messages p, #warning_messages p{
+.error p, .warning p{
     margin: 0.3rem 0;
     font-weight: 500;
     color: #660000;  
+}
+
+.success {
+	display: none;
+	background-color: #ccffcc;
+	border: 1px solid #99cc99;
+	border-radius: 8px;
+	width: 95%;
+	margin: 1rem auto 0 auto;
+	padding: 0.8rem 1rem;
+	box-sizing: border-box;
+	text-align: left;
+	line-height: 1.5;
+	box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+	color: #003300;
+	font-weight: 500;
 }
